@@ -1,5 +1,5 @@
 /*
-Right-to-left fixes for MonoBook.
+Right-to-left fixes for Simple.
 Places sidebar on right, tweaks various alignment issues.
 
 Works mostly ok nicely on Safari 1.2.1; fine in Mozilla.
@@ -24,7 +24,6 @@ To test:
 */
 body {
 	direction: rtl;
-/*    unicode-bidi: bidi-override;*/
 	unicode-bidi: embed;
 }
 #column-content {
@@ -172,4 +171,17 @@ p.mw-ipb-conveniencelinks, p.mw-filedelete-editreasons, p.mw-delete-editreasons 
 }
 table.filehistory th {
 	text-align: right;
+}
+
+/**
+ * Lists:
+ * The following lines don't have a visible effect on non-Gecko browsers
+ * They fix a problem ith Gecko browsers rendering lists to the right of
+ * left-floated objects in an RTL layout.
+ */
+html > body div#bodyContent ul {
+	display: table;
+}
+html > body div#bodyContent ol {
+	display: table;
 }
